--- a/DeepFM_TF2.ipynb
+++ b/DeepFM_TF2.ipynb
@@ -2859,9 +2859,7 @@
      "end_time": "2020-05-13T07:02:54.702059Z",
      "start_time": "2020-05-13T07:02:54.688439Z"
     },
-    "code_folding": [
-     15
-    ]
+    "code_folding": []
    },
    "outputs": [],
    "source": [
@@ -2946,8 +2944,8 @@
      "start_time": "2020-05-13T13:41:24.411673Z"
     },
     "code_folding": [
-     0,
      7,
+     34,
      59,
      81,
      117,
@@ -3198,7 +3196,7 @@
     "    \"feature_size\":cat_featureSize,\n",
     "    \"emb_size\":4,\n",
     "    \"dense_size\":13,\n",
-    "    \"onehot_size\":26,\n",
+    "    \"onehot_size\":26,a\n",
     "    \"multihot_size\":0\n",
     "}\n",
     "M=DeepFM(**params)\n",
@@ -3469,7 +3467,9 @@
      "end_time": "2020-05-13T02:45:38.902468Z",
      "start_time": "2020-05-13T02:45:38.875672Z"
     },
-    "code_folding": [],
+    "code_folding": [
+     0
+    ],
     "deletable": false,
     "editable": false,
     "run_control": {
@@ -4158,7 +4158,6 @@
      91,
      100,
      117,
-     127,
      146
     ]
    },
@@ -4592,6 +4591,7 @@
      "start_time": "2020-05-19T12:33:05.790357Z"
     },
     "code_folding": [
+     0,
      54
     ],
     "scrolled": false
@@ -4758,7 +4758,9 @@
      "end_time": "2020-05-19T14:08:37.553491Z",
      "start_time": "2020-05-19T12:33:17.300157Z"
     },
-    "code_folding": [],
+    "code_folding": [
+     16
+    ],
     "scrolled": false
    },
    "outputs": [
@@ -5554,9 +5556,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Py3.7(zt)",
    "language": "python",
-   "name": "python3"
+   "name": "zt"
   },
   "language_info": {
    "codemirror_mode": {
@@ -5568,7 +5570,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.6"
+   "version": "3.7.9"
   },
   "toc": {
    "base_numbering": 1,
