--- a/RNN.ipynb
+++ b/RNN.ipynb
@@ -1709,6 +1709,7 @@
     "\n",
     "以上两个Case都是因为`batch_size`不能是固定的，改用一个`placeholder`传入它\n",
     "- 参考[github的一个issue](https://github.com/tensorflow/tensorflow/issues/15737)\n",
+    "- 或者用`tf.shape(X)[0]`生成一个option，在执行的时候会去拿这个`batch_size`，这样就不用写feed_dict、sess.run了\n",
     "\n",
     "### mnist.train.next_batch (with batch_size as placeholder)\n",
     "> TypeError: Using a `tf.Tensor` as a Python `bool` is not allowed.\n",
@@ -2702,7 +2703,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.9"
+   "version": "3.7.9"
   },
   "toc": {
    "base_numbering": 1,
