--- a/TextGenerate.ipynb
+++ b/TextGenerate.ipynb
@@ -1196,7 +1196,6 @@
      "start_time": "2019-10-21T11:20:19.138190Z"
     },
     "code_folding": [
-     6,
      11,
      15,
      34
@@ -1708,6 +1707,66 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2021-04-27T11:23:41.550373Z",
+     "start_time": "2021-04-27T11:23:41.541416Z"
+    }
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "66\n",
+      "58\n",
+      ">>> only in a\n",
+      "has_store_     id_-1\n",
+      "isnot_month_n     ew_leader\n",
+      "sku_c     nt_75\n",
+      "fruits_count     \n",
+      "vgtble_count\n",
+      "fresh_count\n",
+      "category_id_count\n",
+      "refrigeration_type_0\n",
+      "refrigeration_type_1\n",
+      "refrigeration_type_2\n",
+      "refrigeration_type_3\n",
+      ">>> only in b\n",
+      "has_store_id_-1\n",
+      "isnot_month_new_leader\n",
+      "sku_cnt_75\n"
+     ]
+    }
+   ],
+   "source": [
+    "a = ['age_30', 'age_40', 'age_50', 'age_25_q', 'age_50_q', 'age_75_q', 'age_mean', 'female_count', 'male_count', 'gender_50', 'store_type_25', 'store_type_50', 'store_type_75', 'store_type_mean', 'has_store_     id_-1', 'has_store_id_0', 'has_store_id_1', 'has_store_id_2', 'has_store_id_3', 'has_store_id_mean', 'isnot_td_new_count', 'is_td_new_count', 'is_td_new_count_mean', 'is_month_new_leader', 'isnot_month_n     ew_leader', 'is_month_new_leader_mean', 'delivery_id_1', 'delivery_id_2', 'delivery_id_3', 'delivery_id_mean', 'num_sum_25', 'num_sum_50', 'num_sum_75', 'num_sum_mean', 'sku_cnt_25', 'sku_cnt_50', 'sku_c     nt_75', 'sku_cnt_mean', 'user_cnt_25', 'user_cnt_50', 'user_cnt_75', 'user_cnt_mean', 'gmv_25', 'gmv_50', 'gmv_75', 'gmv_mean', 'leader_uid_cnt', 'line_num_sum', 'line_gmv', 'line_sku_cnt', 'fruits_count     ', 'vgtble_count', 'fresh_count', 'category_id_count', 'refrigeration_type_0', 'refrigeration_type_1', 'refrigeration_type_2', 'refrigeration_type_3', 'first_eta', 'first_length', 'leader_eta', 'leader_length', 'first_order_num', 'middle_order_num', 'last_order_num', 'delivery_flag']\n",
+    "b = \"age_30,age_40,age_50,age_25_q,age_50_q,age_75_q,age_mean,female_count,male_count,gender_50,store_type_25,store_type_50,store_type_75,store_type_mean,has_store_id_-1,has_store_id_0,has_store_id_1,has_store_id_2,has_store_id_3,has_store_id_mean,isnot_td_new_count,is_td_new_count,is_td_new_count_mean,is_month_new_leader,isnot_month_new_leader,is_month_new_leader_mean,delivery_id_1,delivery_id_2,delivery_id_3,delivery_id_mean,num_sum_25,num_sum_50,num_sum_75,num_sum_mean,sku_cnt_25,sku_cnt_50,sku_cnt_75,sku_cnt_mean,user_cnt_25,user_cnt_50,user_cnt_75,user_cnt_mean,gmv_25,gmv_50,gmv_75,gmv_mean,leader_uid_cnt,line_num_sum,line_gmv,line_sku_cnt,first_eta,first_length,leader_eta,leader_length,first_order_num,middle_order_num,last_order_num,delivery_flag\".split(\",\")\n",
+    "\n",
+    "print(len(a))\n",
+    "print(len(b))\n",
+    "\n",
+    "print(\">>> only in a\")\n",
+    "for i in a:\n",
+    "    if i not in b:\n",
+    "        print(i)\n",
+    "        \n",
+    "print(\">>> only in b\")\n",
+    "for i in b:\n",
+    "    if i not in a:\n",
+    "        print(i)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
    "execution_count": 68,
    "metadata": {
     "ExecuteTime": {
@@ -1844,6 +1903,13 @@
    "metadata": {},
    "outputs": [],
    "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
@@ -1863,7 +1929,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.4"
+   "version": "3.7.9"
   },
   "toc": {
    "base_numbering": 1,
